src/syntax/parser/snapshots/ling__syntax__parser__expr__tests__add_mul.snap
---
source: src/syntax/parser/expr.rs
expression: "test_parse(\"1 + 2 * 3\", |p| p.parse_expr())"
---
(Ok(BinOp(
  op: Add,
  lhs: Const(ConstIdx(0)),
  rhs: BinOp(
    op: Mul,
    lhs: Const(ConstIdx(1)),
    rhs: Const(ConstIdx(2)),
  ),
)), [], [])
