src/syntax/parser/snapshots/ling__syntax__parser__expr__tests__group.snap
---
source: src/syntax/parser/expr.rs
expression: "test_parse(\"(1)\", |p| p.parse_expr())"
---
(Ok(Const(ConstIdx(0))), [], [])
