src/syntax/parser/snapshots/ling__syntax__parser__expr__tests__mul_pow.snap
---
source: src/syntax/parser/expr.rs
expression: "test_parse(\"1 * 2 ^ 3\", |p| p.parse_expr())"
---
(Ok(BinOp(
  op: Mul,
  lhs: Const(ConstIdx(0)),
  rhs: BinOp(
    op: Pow,
    lhs: Const(ConstIdx(1)),
    rhs: Const(ConstIdx(2)),
  ),
)), [], [])
