src/syntax/parser/snapshots/ling__syntax__parser__expr__tests__trailing_else.snap
---
source: src/syntax/parser/expr.rs
expression: "test_parse(\"if a { 12 } elif b { 14 } else { 16 } else { 18 }\",\n    |p| p.parse_expr())"
---
(Ok(If(
  branches: [
    IfBranch(
      cond: Var(Unresolved("a")),
      then: Block(
        stmts: [],
        final_expr: Const(ConstIdx(0)),
      ),
    ),
    IfBranch(
      cond: Var(Unresolved("b")),
      then: Block(
        stmts: [],
        final_expr: Const(ConstIdx(1)),
      ),
    ),
  ],
  else_: Some(Block(
    stmts: [],
    final_expr: Const(ConstIdx(2)),
  )),
)), [], [])
