src/syntax/parser/snapshots/ling__syntax__parser__expr__tests__unit.snap
---
source: src/syntax/parser/expr.rs
expression: "test_parse(\"()\", |p| p.parse_expr())"
---
(Ok(Unit), [], [])
